Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.404 devel

***	Added Verilog::Netlist/Verilog::Parser parser option.

****	Fix virtual modport without interface, bug778. [Jon Nall]

****	Fix Bison 4.0 warnings.


* Verilog::Language 3.403 2014-03-11

****	Fix parsing "#0 'b0", bug256.

****	Fix build on MacOS 5.12.4. [Robert Bell]

****    Fix multiple pre-ANSI package imports on same line. [Brad Dobbie]


* Verilog::Language 3.402 2013-10-17

****	Fix function/task named parameter calls with empty parenthesis.

****	Fix parameter assignment to mintypmax_expressions, bug671. [Arnaud Turier]


* Verilog::Language 3.401 2013-05-21

***	Fix recognizing type parameters as classes, bug627. [Jon Nall]

****	Fix missing endtask callbacks in DPI and methods, bug641. [Jon Nall]


* Verilog::Language 3.400 2013-02-27

***	Support SystemVerilog 1800-2012.

****	Predefine SV_COV_START and other IEEE mandated predefines.


* Verilog::Language 3.318 2012-11-28

****	Fix vpassert test failure in bleadperl 5.17.5-518, bug582.  [Andreas Koenig]


* Verilog::Language 3.317 2012-10-01

***	Gunzip Verilog::Preproc filenames ending in .gz, bug564. [Jingzhen Hu]

****	Fix multidimensional unpacked wires. [Leif Tore Rusten]

****	Fix MacOS 10.8 build error. [Oliver King-Smith]


* Verilog::Language 3.316 2012-07-27

****	Fix newlines in radix values, bug507. [Walter Lavino]

****	Fix internal readWholefile error check, bug518. [Wei Song]

****	Fix parsing hierarchical binds.  [Brian Mokrzycki]


* Verilog::Language 3.315 2012-05-04

***	Put root localparams into $root module, bug471. [Corey Teffetalor]

****	Fix comment callback starting line, bug459. [Max Bjurling]

****	Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]

****	Fix const class member parsing.
