@@ -956,9 +956,22 @@ verilog/parser_sv.v:390: VAR  'port' 'a' 'modport' '' '' '' 'a'
 verilog/parser_sv.v:390: PORT  'a' 'modport' 'output' '' '' '1'
 verilog/parser_sv.v:390: ENDMODPORT  'endmodport'
 verilog/parser_sv.v:391: ENDINTERFACE  'endinterface'
-verilog/parser_sv.v:392: MODULE  'module' 'bug778' undef '0'
-verilog/parser_sv.v:393: VAR  'var' 'bar' 'module' '' 'virtual if_bug777' '' ''
-verilog/parser_sv.v:394: ENDMODULE  'endmodule'
+verilog/parser_sv.v:392: MODULE  'module' 'bug777' undef '0'
+verilog/parser_sv.v:392: PORT  'clk' 'module' '' '' '' '1'
+verilog/parser_sv.v:392: PORT  'ifport' 'module' '' '' '' '2'
+verilog/parser_sv.v:393: VAR  'port' 'clk' 'module' '' '' '' ''
+verilog/parser_sv.v:393: PORT  'clk' 'module' 'input' '' '' '0'
+verilog/parser_sv.v:394: INSTANT  'if_bug777' 'ifport' ''
+verilog/parser_sv.v:394: ENDCELL  ''
+verilog/parser_sv.v:395: INSTANT  'if_bug777' 'ifportmp' ''
+verilog/parser_sv.v:395: ENDCELL  ''
+verilog/parser_sv.v:396: COMMENT  '// Currently unsupported, parens required so VP knows is instance'
+verilog/parser_sv.v:397: COMMENT  '//if_bug777 ifport;'
+verilog/parser_sv.v:398: COMMENT  '//if_bug777.mp ifportmp;'
+verilog/parser_sv.v:399: ENDMODULE  'endmodule'
+verilog/parser_sv.v:400: MODULE  'module' 'bug778' undef '0'
+verilog/parser_sv.v:401: VAR  'var' 'bar' 'module' '' 'virtual if_bug777' '' ''
+verilog/parser_sv.v:402: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
